# ExtremeIntegers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
01-types/: CMakeLists.txt
01-types/src/: main.cpp
02-literals/: CMakeLists.txt
02-literals/src/: main.cpp
03-negation/: CMakeLists.txt
03-negation/src/: main.cpp
04-math/: CMakeLists.txt
04-math/src/: main.cpp
05-overflow/: CMakeLists.txt
05-overflow/src/: main.cpp
06-comparison/: CMakeLists.txt
06-comparison/src/: main.cpp
common/: CMakeLists.txt
common/src/: IntegerToString.hpp  TypeInfo.hpp
